syntax = "proto3";
package network.project.v1;

import "amino/amino.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "network/project/v1/special_allocations.proto";

option go_package = "github.com/ignite/network/x/project/types";

message Project {
  uint64 projectID = 1;
  string projectName = 2;
  uint64 coordinatorID = 3;
  int64 createdAt = 4;
  uint64 mainnetID = 5;
  bool mainnetInitialized = 6;
  repeated cosmos.base.v1beta1.Coin totalSupply = 7 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true,
    (amino.encoding) = "legacy_coins",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  repeated cosmos.base.v1beta1.Coin allocatedShares = 8 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true,
    (amino.encoding) = "legacy_coins",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin",
    (gogoproto.castrepeated) = "Shares"
  ];
  SpecialAllocations specialAllocations = 9 [(gogoproto.nullable) = false];
  bytes metadata = 10;
}
